source/y.output
Grammar

    0 $accept: program $end

    1 program: body

    2 func: head body tail

    3 head: tFUNC tID tLPAR par_decl_list tRPAR tCOL type

    4 body: decl_list stmt_list

    5 tail: tEND tID

    6 type: tID
    7     | tINTTYPE
    8     | tBOOLTYPE
    9     | tARRAYTYPE tOF type
   10     | tRECORDTYPE tOF tLCURL var_decl_list tRCURL

   11 par_decl_list: var_decl_list
   12              | %empty

   13 var_decl_list: var_type tCOM var_decl_list
   14              | var_type
   15              | var_type tCOM error var_decl_list

   16 var_type: tID tCOL type

   17 decl_list: %empty
   18          | decl decl_list

   19 decl: tTYPE tID tASSI type tSEMI
   20     | func
   21     | tVAR var_decl_list tSEMI

   22 stmt_list: stmt
   23          | stmt stmt_list

   24 stmt: tRETURN exp tSEMI
   25     | tWRITE exp tSEMI
   26     | tALLOC var tSEMI
   27     | tALLOC var tOF tLEN exp tSEMI
   28     | var tASSI exp tSEMI
   29     | tIF exp tTHEN stmt
   30     | tIF exp tTHEN stmt tELSE stmt
   31     | tWHILE exp tDO stmt
   32     | tLCURL stmt_list tRCURL
   33     | error tSEMI

   34 var: tID
   35    | var tLSQ exp tRSQ
   36    | var tDOT tID

   37 exp: exp tPLUS exp
   38    | exp tMINUS exp
   39    | exp tTIMES exp
   40    | exp tMOD exp
   41    | exp tDIV exp
   42    | exp tEQ exp
   43    | exp tNE exp
   44    | exp tLE exp
   45    | exp tGE exp
   46    | exp tLESS exp
   47    | exp tGREAT exp
   48    | exp tAND exp
   49    | exp tOR exp
   50    | term

   51 term: var
   52     | tID tLPAR act_list tRPAR
   53     | tLPAR exp tRPAR
   54     | tNEG term
   55     | tBAR exp tBAR
   56     | tINT
   57     | tTRUE
   58     | tFALSE
   59     | tNULL

   60 act_list: exp_list
   61         | %empty

   62 exp_list: exp
   63         | exp tCOM exp_list


Terminals, with rules where they appear

$end (0) 0
error (256) 15 33
tINT (258) 56
tID (259) 3 5 6 16 19 34 36 52
tPLUS (260) 37
tMINUS (261) 38
tTIMES (262) 39
tDIV (263) 41
tEQ (264) 42
tNE (265) 43
tLE (266) 44
tGE (267) 45
tLESS (268) 46
tGREAT (269) 47
tAND (270) 48
tOR (271) 49
tLPAR (272) 3 52 53
tRPAR (273) 3 52 53
tLSQ (274) 35
tRSQ (275) 35
tLCURL (276) 10 32
tRCURL (277) 10 32
tEND (278) 5
tINTTYPE (279) 7
tBOOLTYPE (280) 8
tARRAYTYPE (281) 9
tOF (282) 9 10 27
tRECORDTYPE (283) 10
tTYPE (284) 19
tVAR (285) 21
tRETURN (286) 24
tWRITE (287) 25
tALLOC (288) 26 27
tLEN (289) 27
tIF (290) 29 30
tTHEN (291) 29 30
tELSE (292) 30
tWHILE (293) 31
tDO (294) 31
tNULL (295) 59
tTRUE (296) 57
tFALSE (297) 58
tASSI (298) 19 28
tNEG (299) 54
tDOT (300) 36
tFUNC (301) 3
tBAR (302) 55
tCOL (303) 3 16
tCOM (304) 13 15 63
tSEMI (305) 19 21 24 25 26 27 28 33
tMOD (306) 40


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
func (54)
    on left: 2, on right: 20
head (55)
    on left: 3, on right: 2
body (56)
    on left: 4, on right: 1 2
tail (57)
    on left: 5, on right: 2
type (58)
    on left: 6 7 8 9 10, on right: 3 9 16 19
par_decl_list (59)
    on left: 11 12, on right: 3
var_decl_list (60)
    on left: 13 14 15, on right: 10 11 13 15 21
var_type (61)
    on left: 16, on right: 13 14 15
decl_list (62)
    on left: 17 18, on right: 4 18
decl (63)
    on left: 19 20 21, on right: 18
stmt_list (64)
    on left: 22 23, on right: 4 23 32
stmt (65)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 22 23 29 30 31
var (66)
    on left: 34 35 36, on right: 26 27 28 35 36 51
exp (67)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50, on right: 24
    25 27 28 29 30 31 35 37 38 39 40 41 42 43 44 45 46 47 48 49 53
    55 62 63
term (68)
    on left: 51 52 53 54 55 56 57 58 59, on right: 50 54
act_list (69)
    on left: 60 61, on right: 52
exp_list (70)
    on left: 62 63, on right: 60 63


State 0

    0 $accept: . program $end

    tTYPE  shift, and go to state 1
    tVAR   shift, and go to state 2
    tFUNC  shift, and go to state 3

    $default  reduce using rule 17 (decl_list)

    program    go to state 4
    func       go to state 5
    head       go to state 6
    body       go to state 7
    decl_list  go to state 8
    decl       go to state 9


State 1

   19 decl: tTYPE . tID tASSI type tSEMI

    tID  shift, and go to state 10


State 2

   21 decl: tVAR . var_decl_list tSEMI

    tID  shift, and go to state 11

    var_decl_list  go to state 12
    var_type       go to state 13


State 3

    3 head: tFUNC . tID tLPAR par_decl_list tRPAR tCOL type

    tID  shift, and go to state 14


State 4

    0 $accept: program . $end

    $end  shift, and go to state 15


State 5

   20 decl: func .

    $default  reduce using rule 20 (decl)


State 6

    2 func: head . body tail

    tTYPE  shift, and go to state 1
    tVAR   shift, and go to state 2
    tFUNC  shift, and go to state 3

    $default  reduce using rule 17 (decl_list)

    func       go to state 5
    head       go to state 6
    body       go to state 16
    decl_list  go to state 8
    decl       go to state 9


State 7

    1 program: body .

    $default  reduce using rule 1 (program)


State 8

    4 body: decl_list . stmt_list

    error    shift, and go to state 17
    tID      shift, and go to state 18
    tLCURL   shift, and go to state 19
    tRETURN  shift, and go to state 20
    tWRITE   shift, and go to state 21
    tALLOC   shift, and go to state 22
    tIF      shift, and go to state 23
    tWHILE   shift, and go to state 24

    stmt_list  go to state 25
    stmt       go to state 26
    var        go to state 27


State 9

   18 decl_list: decl . decl_list

    tTYPE  shift, and go to state 1
    tVAR   shift, and go to state 2
    tFUNC  shift, and go to state 3

    $default  reduce using rule 17 (decl_list)

    func       go to state 5
    head       go to state 6
    decl_list  go to state 28
    decl       go to state 9


State 10

   19 decl: tTYPE tID . tASSI type tSEMI

    tASSI  shift, and go to state 29


State 11

   16 var_type: tID . tCOL type

    tCOL  shift, and go to state 30


State 12

   21 decl: tVAR var_decl_list . tSEMI

    tSEMI  shift, and go to state 31


State 13

   13 var_decl_list: var_type . tCOM var_decl_list
   14              | var_type .
   15              | var_type . tCOM error var_decl_list

    tCOM  shift, and go to state 32

    $default  reduce using rule 14 (var_decl_list)


State 14

    3 head: tFUNC tID . tLPAR par_decl_list tRPAR tCOL type

    tLPAR  shift, and go to state 33


State 15

    0 $accept: program $end .

    $default  accept


State 16

    2 func: head body . tail

    tEND  shift, and go to state 34

    tail  go to state 35


State 17

   33 stmt: error . tSEMI

    tSEMI  shift, and go to state 36


State 18

   34 var: tID .

    $default  reduce using rule 34 (var)


State 19

   32 stmt: tLCURL . stmt_list tRCURL

    error    shift, and go to state 17
    tID      shift, and go to state 18
    tLCURL   shift, and go to state 19
    tRETURN  shift, and go to state 20
    tWRITE   shift, and go to state 21
    tALLOC   shift, and go to state 22
    tIF      shift, and go to state 23
    tWHILE   shift, and go to state 24

    stmt_list  go to state 37
    stmt       go to state 26
    var        go to state 27


State 20

   24 stmt: tRETURN . exp tSEMI

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 47
    term  go to state 48


State 21

   25 stmt: tWRITE . exp tSEMI

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 49
    term  go to state 48


State 22

   26 stmt: tALLOC . var tSEMI
   27     | tALLOC . var tOF tLEN exp tSEMI

    tID  shift, and go to state 18

    var  go to state 50


State 23

   29 stmt: tIF . exp tTHEN stmt
   30     | tIF . exp tTHEN stmt tELSE stmt

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 51
    term  go to state 48


State 24

   31 stmt: tWHILE . exp tDO stmt

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 52
    term  go to state 48


State 25

    4 body: decl_list stmt_list .

    $default  reduce using rule 4 (body)


State 26

   22 stmt_list: stmt .
   23          | stmt . stmt_list

    error    shift, and go to state 17
    tID      shift, and go to state 18
    tLCURL   shift, and go to state 19
    tRETURN  shift, and go to state 20
    tWRITE   shift, and go to state 21
    tALLOC   shift, and go to state 22
    tIF      shift, and go to state 23
    tWHILE   shift, and go to state 24

    $end    reduce using rule 22 (stmt_list)
    tRCURL  reduce using rule 22 (stmt_list)
    tEND    reduce using rule 22 (stmt_list)

    stmt_list  go to state 53
    stmt       go to state 26
    var        go to state 27


State 27

   28 stmt: var . tASSI exp tSEMI
   35 var: var . tLSQ exp tRSQ
   36    | var . tDOT tID

    tLSQ   shift, and go to state 54
    tASSI  shift, and go to state 55
    tDOT   shift, and go to state 56


State 28

   18 decl_list: decl decl_list .

    $default  reduce using rule 18 (decl_list)


State 29

   19 decl: tTYPE tID tASSI . type tSEMI

    tID          shift, and go to state 57
    tINTTYPE     shift, and go to state 58
    tBOOLTYPE    shift, and go to state 59
    tARRAYTYPE   shift, and go to state 60
    tRECORDTYPE  shift, and go to state 61

    type  go to state 62


State 30

   16 var_type: tID tCOL . type

    tID          shift, and go to state 57
    tINTTYPE     shift, and go to state 58
    tBOOLTYPE    shift, and go to state 59
    tARRAYTYPE   shift, and go to state 60
    tRECORDTYPE  shift, and go to state 61

    type  go to state 63


State 31

   21 decl: tVAR var_decl_list tSEMI .

    $default  reduce using rule 21 (decl)


State 32

   13 var_decl_list: var_type tCOM . var_decl_list
   15              | var_type tCOM . error var_decl_list

    error  shift, and go to state 64
    tID    shift, and go to state 11

    var_decl_list  go to state 65
    var_type       go to state 13


State 33

    3 head: tFUNC tID tLPAR . par_decl_list tRPAR tCOL type

    tID  shift, and go to state 11

    $default  reduce using rule 12 (par_decl_list)

    par_decl_list  go to state 66
    var_decl_list  go to state 67
    var_type       go to state 13


State 34

    5 tail: tEND . tID

    tID  shift, and go to state 68


State 35

    2 func: head body tail .

    $default  reduce using rule 2 (func)


State 36

   33 stmt: error tSEMI .

    $default  reduce using rule 33 (stmt)


State 37

   32 stmt: tLCURL stmt_list . tRCURL

    tRCURL  shift, and go to state 69


State 38

   56 term: tINT .

    $default  reduce using rule 56 (term)


State 39

   34 var: tID .
   52 term: tID . tLPAR act_list tRPAR

    tLPAR  shift, and go to state 70

    $default  reduce using rule 34 (var)


State 40

   53 term: tLPAR . exp tRPAR

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 71
    term  go to state 48


State 41

   59 term: tNULL .

    $default  reduce using rule 59 (term)


State 42

   57 term: tTRUE .

    $default  reduce using rule 57 (term)


State 43

   58 term: tFALSE .

    $default  reduce using rule 58 (term)


State 44

   54 term: tNEG . term

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    term  go to state 72


State 45

   55 term: tBAR . exp tBAR

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 73
    term  go to state 48


State 46

   35 var: var . tLSQ exp tRSQ
   36    | var . tDOT tID
   51 term: var .

    tLSQ  shift, and go to state 54
    tDOT  shift, and go to state 56

    $default  reduce using rule 51 (term)


State 47

   24 stmt: tRETURN exp . tSEMI
   37 exp: exp . tPLUS exp
   38    | exp . tMINUS exp
   39    | exp . tTIMES exp
   40    | exp . tMOD exp
   41    | exp . tDIV exp
   42    | exp . tEQ exp
   43    | exp . tNE exp
   44    | exp . tLE exp
   45    | exp . tGE exp
   46    | exp . tLESS exp
   47    | exp . tGREAT exp
   48    | exp . tAND exp
   49    | exp . tOR exp

    tPLUS   shift, and go to state 74
    tMINUS  shift, and go to state 75
    tTIMES  shift, and go to state 76
    tDIV    shift, and go to state 77
    tEQ     shift, and go to state 78
    tNE     shift, and go to state 79
    tLE     shift, and go to state 80
    tGE     shift, and go to state 81
    tLESS   shift, and go to state 82
    tGREAT  shift, and go to state 83
    tAND    shift, and go to state 84
    tOR     shift, and go to state 85
    tSEMI   shift, and go to state 86
    tMOD    shift, and go to state 87


State 48

   50 exp: term .

    $default  reduce using rule 50 (exp)


State 49

   25 stmt: tWRITE exp . tSEMI
   37 exp: exp . tPLUS exp
   38    | exp . tMINUS exp
   39    | exp . tTIMES exp
   40    | exp . tMOD exp
   41    | exp . tDIV exp
   42    | exp . tEQ exp
   43    | exp . tNE exp
   44    | exp . tLE exp
   45    | exp . tGE exp
   46    | exp . tLESS exp
   47    | exp . tGREAT exp
   48    | exp . tAND exp
   49    | exp . tOR exp

    tPLUS   shift, and go to state 74
    tMINUS  shift, and go to state 75
    tTIMES  shift, and go to state 76
    tDIV    shift, and go to state 77
    tEQ     shift, and go to state 78
    tNE     shift, and go to state 79
    tLE     shift, and go to state 80
    tGE     shift, and go to state 81
    tLESS   shift, and go to state 82
    tGREAT  shift, and go to state 83
    tAND    shift, and go to state 84
    tOR     shift, and go to state 85
    tSEMI   shift, and go to state 88
    tMOD    shift, and go to state 87


State 50

   26 stmt: tALLOC var . tSEMI
   27     | tALLOC var . tOF tLEN exp tSEMI
   35 var: var . tLSQ exp tRSQ
   36    | var . tDOT tID

    tLSQ   shift, and go to state 54
    tOF    shift, and go to state 89
    tDOT   shift, and go to state 56
    tSEMI  shift, and go to state 90


State 51

   29 stmt: tIF exp . tTHEN stmt
   30     | tIF exp . tTHEN stmt tELSE stmt
   37 exp: exp . tPLUS exp
   38    | exp . tMINUS exp
   39    | exp . tTIMES exp
   40    | exp . tMOD exp
   41    | exp . tDIV exp
   42    | exp . tEQ exp
   43    | exp . tNE exp
   44    | exp . tLE exp
   45    | exp . tGE exp
   46    | exp . tLESS exp
   47    | exp . tGREAT exp
   48    | exp . tAND exp
   49    | exp . tOR exp

    tPLUS   shift, and go to state 74
    tMINUS  shift, and go to state 75
    tTIMES  shift, and go to state 76
    tDIV    shift, and go to state 77
    tEQ     shift, and go to state 78
    tNE     shift, and go to state 79
    tLE     shift, and go to state 80
    tGE     shift, and go to state 81
    tLESS   shift, and go to state 82
    tGREAT  shift, and go to state 83
    tAND    shift, and go to state 84
    tOR     shift, and go to state 85
    tTHEN   shift, and go to state 91
    tMOD    shift, and go to state 87


State 52

   31 stmt: tWHILE exp . tDO stmt
   37 exp: exp . tPLUS exp
   38    | exp . tMINUS exp
   39    | exp . tTIMES exp
   40    | exp . tMOD exp
   41    | exp . tDIV exp
   42    | exp . tEQ exp
   43    | exp . tNE exp
   44    | exp . tLE exp
   45    | exp . tGE exp
   46    | exp . tLESS exp
   47    | exp . tGREAT exp
   48    | exp . tAND exp
   49    | exp . tOR exp

    tPLUS   shift, and go to state 74
    tMINUS  shift, and go to state 75
    tTIMES  shift, and go to state 76
    tDIV    shift, and go to state 77
    tEQ     shift, and go to state 78
    tNE     shift, and go to state 79
    tLE     shift, and go to state 80
    tGE     shift, and go to state 81
    tLESS   shift, and go to state 82
    tGREAT  shift, and go to state 83
    tAND    shift, and go to state 84
    tOR     shift, and go to state 85
    tDO     shift, and go to state 92
    tMOD    shift, and go to state 87


State 53

   23 stmt_list: stmt stmt_list .

    $default  reduce using rule 23 (stmt_list)


State 54

   35 var: var tLSQ . exp tRSQ

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 93
    term  go to state 48


State 55

   28 stmt: var tASSI . exp tSEMI

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 94
    term  go to state 48


State 56

   36 var: var tDOT . tID

    tID  shift, and go to state 95


State 57

    6 type: tID .

    $default  reduce using rule 6 (type)


State 58

    7 type: tINTTYPE .

    $default  reduce using rule 7 (type)


State 59

    8 type: tBOOLTYPE .

    $default  reduce using rule 8 (type)


State 60

    9 type: tARRAYTYPE . tOF type

    tOF  shift, and go to state 96


State 61

   10 type: tRECORDTYPE . tOF tLCURL var_decl_list tRCURL

    tOF  shift, and go to state 97


State 62

   19 decl: tTYPE tID tASSI type . tSEMI

    tSEMI  shift, and go to state 98


State 63

   16 var_type: tID tCOL type .

    $default  reduce using rule 16 (var_type)


State 64

   15 var_decl_list: var_type tCOM error . var_decl_list

    tID  shift, and go to state 11

    var_decl_list  go to state 99
    var_type       go to state 13


State 65

   13 var_decl_list: var_type tCOM var_decl_list .

    $default  reduce using rule 13 (var_decl_list)


State 66

    3 head: tFUNC tID tLPAR par_decl_list . tRPAR tCOL type

    tRPAR  shift, and go to state 100


State 67

   11 par_decl_list: var_decl_list .

    $default  reduce using rule 11 (par_decl_list)


State 68

    5 tail: tEND tID .

    $default  reduce using rule 5 (tail)


State 69

   32 stmt: tLCURL stmt_list tRCURL .

    $default  reduce using rule 32 (stmt)


State 70

   52 term: tID tLPAR . act_list tRPAR

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    $default  reduce using rule 61 (act_list)

    var       go to state 46
    exp       go to state 101
    term      go to state 48
    act_list  go to state 102
    exp_list  go to state 103


State 71

   37 exp: exp . tPLUS exp
   38    | exp . tMINUS exp
   39    | exp . tTIMES exp
   40    | exp . tMOD exp
   41    | exp . tDIV exp
   42    | exp . tEQ exp
   43    | exp . tNE exp
   44    | exp . tLE exp
   45    | exp . tGE exp
   46    | exp . tLESS exp
   47    | exp . tGREAT exp
   48    | exp . tAND exp
   49    | exp . tOR exp
   53 term: tLPAR exp . tRPAR

    tPLUS   shift, and go to state 74
    tMINUS  shift, and go to state 75
    tTIMES  shift, and go to state 76
    tDIV    shift, and go to state 77
    tEQ     shift, and go to state 78
    tNE     shift, and go to state 79
    tLE     shift, and go to state 80
    tGE     shift, and go to state 81
    tLESS   shift, and go to state 82
    tGREAT  shift, and go to state 83
    tAND    shift, and go to state 84
    tOR     shift, and go to state 85
    tRPAR   shift, and go to state 104
    tMOD    shift, and go to state 87


State 72

   54 term: tNEG term .

    $default  reduce using rule 54 (term)


State 73

   37 exp: exp . tPLUS exp
   38    | exp . tMINUS exp
   39    | exp . tTIMES exp
   40    | exp . tMOD exp
   41    | exp . tDIV exp
   42    | exp . tEQ exp
   43    | exp . tNE exp
   44    | exp . tLE exp
   45    | exp . tGE exp
   46    | exp . tLESS exp
   47    | exp . tGREAT exp
   48    | exp . tAND exp
   49    | exp . tOR exp
   55 term: tBAR exp . tBAR

    tPLUS   shift, and go to state 74
    tMINUS  shift, and go to state 75
    tTIMES  shift, and go to state 76
    tDIV    shift, and go to state 77
    tEQ     shift, and go to state 78
    tNE     shift, and go to state 79
    tLE     shift, and go to state 80
    tGE     shift, and go to state 81
    tLESS   shift, and go to state 82
    tGREAT  shift, and go to state 83
    tAND    shift, and go to state 84
    tOR     shift, and go to state 85
    tBAR    shift, and go to state 105
    tMOD    shift, and go to state 87


State 74

   37 exp: exp tPLUS . exp

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 106
    term  go to state 48


State 75

   38 exp: exp tMINUS . exp

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 107
    term  go to state 48


State 76

   39 exp: exp tTIMES . exp

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 108
    term  go to state 48


State 77

   41 exp: exp tDIV . exp

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 109
    term  go to state 48


State 78

   42 exp: exp tEQ . exp

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 110
    term  go to state 48


State 79

   43 exp: exp tNE . exp

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 111
    term  go to state 48


State 80

   44 exp: exp tLE . exp

    tINT    shift, and go to state 38
    tID     shift, and go to state 39
    tLPAR   shift, and go to state 40
    tNULL   shift, and go to state 41
    tTRUE   shift, and go to state 42
    tFALSE  shift, and go to state 43
    tNEG    shift, and go to state 44
    tBAR    shift, and go to state 45

    var   go to state 46
    exp   go to state 112
    term  go to state 48


State 81

   45 exp: exp tGE . exp
